# ngram_project

./: CMakeLists.txt  bigrams_AoS.cpp  bigrams_SoA.cpp  bigrams_parallel.cpp  bigrams_parallel_opt.cpp  bigrams_vectorization.cpp  histogram_parallel.cpp  main.cpp  parallel_bigrams_count.c  sequential_bigrams_count.c
